--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     "cors": "https://esm.sh/cors@^2.8.5",
     "xlsx": "https://esm.sh/xlsx@^0.18.5",
     "body-parser": "https://esm.sh/body-parser@^2.2.2",
-    "@prisma/client": "https://esm.sh/@prisma/client@^7.2.0"
+    "@prisma/client": "https://esm.sh/@prisma/client@^7.2.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.48.1"
   }
 }
 </script>
